<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2ACCE5"
        android:paddingLeft="@dimen/padding_margin_medium"
        android:paddingStart="@dimen/padding_margin_medium"
        android:paddingTop="@dimen/padding_margin_medium">

        <ImageView
            android:id="@+id/trello_title_img"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/padding_margin_medium"
            android:layout_marginEnd="@dimen/padding_margin_medium"
            android:layout_marginRight="@dimen/padding_margin_medium"
            android:layout_marginTop="@dimen/padding_margin_medium"
            android:contentDescription="@string/trello_logo"
            android:src="@drawable/trello_title" />

        <TextView
            android:id="@+id/fragmentFour_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_layout"
            android:layout_below="@id/trello_title_img"
            android:layout_marginBottom="@dimen/padding_margin_medium"
            android:layout_marginEnd="@dimen/padding_margin_medium"
            android:layout_marginRight="@dimen/padding_margin_medium"
            android:layout_marginTop="@dimen/padding_margin_medium"
            android:fontFamily="serif"
            android:text="@string/fragmentFour_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/taco_with_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/padding_margin_medium"
            android:layout_marginRight="@dimen/padding_margin_medium"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playstore"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/trello_organize"
                android:onClick="getTheApp"
                android:src="@drawable/ic_play_store"
                android:background="?android:selectableItemBackground"/>

            <ImageView
                android:id="@+id/appstore"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/trello_organize"
                android:onClick="getTheApp"
                android:src="@drawable/ic_apple_store"
                android:background="?android:selectableItemBackground"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/taco_with_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/taco_usecases"
            android:contentDescription="@string/trello_ideas" />

    </RelativeLayout>

</ScrollView>